<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"/>

        <Spinner
            android:id="@+id/spTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhe"/>

        <Spinner
            android:id="@+id/spDetalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"/>


        <EditText
            android:id="@+id/etValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints="0.00"
            android:hint="@string/_0_00"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_lanc"/>

        <EditText
            android:id="@+id/etDataLancamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:autofillHints="dd/mm/yyyy"
            android:hint="@string/dd_mm_yyyy"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/btLancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btLancarOnClick"
        android:text="@string/lancar" />

    <Button
        android:id="@+id/btVerLancamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btVerLancamentosOnClick"
        android:text="@string/ver_lancamentos" />

    <Button
        android:id="@+id/btSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btSaldoOnClick"
        android:text="@string/saldo" />

</LinearLayout>